trunk/Archive2/15/47ab1bc2c82c08/output
main.cpp: In function 'void print_item(std::basic_ostream<_CharT, _Traits>&, const std::basic_string<_CharT, _Traits, _Alloc>&)':
main.cpp:17:13: error: 'quoted' is not a member of 'std'
   stream << std::quoted(item);
             ^
